// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generic: src/types.ts 1`] = `
"import type { JSONAPIDataDocument } from "@fresha/api-tools-core";


/**
 * This is a response resource
 *
 */
export type SimpleResponseDocument = JSONAPIDataDocument;
"
`;

exports[`included includes resources of multiple types: src/types.ts 1`] = `
"import type { JSONAPIServerResource, JSONAPIDataDocument } from "@fresha/api-tools-core";


/**
 * Employee
 *
 */
export type Employee = JSONAPIServerResource<'employees'>;

/**
 * Organization
 *
 */
export type Organization = JSONAPIServerResource<'organizations'>;

/**
 * This is a response resource
 *
 * Primary data resources:
 *  - Employee
 *
 * Included resources:
 *  - Organization
 *  - Employee
 *
 */
export type DocumentWithIncludedResources = JSONAPIDataDocument<Employee, Organization | Employee>;
"
`;

exports[`included single type of included resources: src/types.ts 1`] = `
"import type { JSONAPIServerResource, JSONAPIDataDocument } from "@fresha/api-tools-core";


/**
 * Employee
 *
 */
export type Employee = JSONAPIServerResource<'employees'>;

/**
 * This is a response resource
 *
 * Primary data resources:
 *  - Employee
 *
 * Included resources:
 *  - Employee
 *
 */
export type DocumentWithIncludedResources = JSONAPIDataDocument<Employee, Employee>;
"
`;

exports[`jsdocs: src/types.ts 1`] = `
"import type { JSONAPIServerResource, JSONAPIDataDocument } from "@fresha/api-tools-core";


/**
 * Employee
 *
 */
export type Employee = JSONAPIServerResource<'employees'>;

/**
 * A simple object schema
 *
 * This is a description of the schema.
 * The schema represents a simple object.
 *
 * This is a response resource
 *
 * Primary data resources:
 *  - Employee
 *
 */
export type SimpleResponseDocument = JSONAPIDataDocument<Employee>;
"
`;

exports[`primary data multiple resources of the same type: src/types.ts 1`] = `
"import type { JSONAPIServerResource, JSONAPIDataDocument } from "@fresha/api-tools-core";


/**
 * Employee
 *
 */
export type Employee = JSONAPIServerResource<'employees'>;

/**
 * This is a response resource
 *
 * Primary data resources:
 *  - Employee
 *
 */
export type SimpleResponseDocument = JSONAPIDataDocument<(Employee)[]>;
"
`;

exports[`primary data single inline resource: src/types.ts 1`] = `
"import type { JSONAPIServerResource, JSONAPIDataDocument } from "@fresha/api-tools-core";


export type Unknown1 = JSONAPIServerResource<'employees'>;

/**
 * This is a response resource
 *
 * Primary data resources:
 *  - Unknown1
 *
 */
export type SimpleResponseDocument = JSONAPIDataDocument<Unknown1>;
"
`;

exports[`primary data single resource of possibly multiple types: src/types.ts 1`] = `
"import type { JSONAPIServerResource, JSONAPIDataDocument } from "@fresha/api-tools-core";


/**
 * EmployeeResource
 *
 */
export type EmployeeResource = JSONAPIServerResource<'employees'>;

/**
 * OrganizationResource
 *
 */
export type OrganizationResource = JSONAPIServerResource<'organizations'>;

/**
 * This is a response resource
 *
 * Primary data resources:
 *  - EmployeeResource
 *  - OrganizationResource
 *
 */
export type ResponseDocumentWithUnionTypes = JSONAPIDataDocument<EmployeeResource | OrganizationResource>;
"
`;

exports[`primary data single shared resource: src/types.ts 1`] = `
"import type { JSONAPIServerResource, JSONAPIDataDocument } from "@fresha/api-tools-core";


/**
 * Employee
 *
 */
export type Employee = JSONAPIServerResource<'employees'>;

/**
 * This is a response resource
 *
 * Primary data resources:
 *  - Employee
 *
 */
export type SimpleResponseDocument = JSONAPIDataDocument<Employee>;
"
`;

exports[`primary data skip resources that were generated before: src/types.ts 1`] = `
"import type { JSONAPIDataDocument } from "@fresha/api-tools-core";


/**
 * This is a response resource
 *
 * Primary data resources:
 *  - Employee
 *
 */
export type SimpleResponseDocument = JSONAPIDataDocument<(Employee)[]>;
"
`;
